# Code-Demon

./: .gitignore  BUGFIXES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TOOL-VALIDATOR.md  USAGE.md  pyproject.toml  requirements.txt
code_demon/: __init__.py  __main__.py
code_demon/achievements/: definitions.py  tracker.py
code_demon/cli/: ui.py
code_demon/config/: settings.py
code_demon/core/: __init__.py  agent.py  approval.py  memory.py
code_demon/core/llm/: __ init__.py  __init__.py  base.py  ollama.py  textgen.py
code_demon/history/: storage.py  types.py
code_demon/personality/: phrases.py  prompts.py
code_demon/tools/: __init__.py  registry.py
code_demon/tools/code/: __init__.py
code_demon/tools/execution/: __init__.py  command.py
code_demon/tools/files/: __init__.py  edit.py  read.py  search.py  write.py
code_demon/tools/git/: __init__.py  branch.py  commit.py  diff.py  push.py  status.py
code_demon/tools/web/: __init__.py  http.py
